--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -2,7 +2,7 @@
 
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
+        <a class="upper-left" href="{{ url_for('overview') }}">[O]verview</a>
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure') }}">General Setup</a>
         <span class="separator">|</span>
@@ -11,10 +11,45 @@
 {% endblock %}
 
 {% block content %}
+    <script>
+        const linkForKey = {
+            'o': '{{ url_for('overview') }}',
+        };
+        document.addEventListener('DOMContentLoaded', function () {
+            document.addEventListener('keypress', function (event) {
+                const key = event.key.toLowerCase();
+                if (key === 'd') {
+                    document.getElementById('drop-btn').click();
+                } else if (linkForKey[key]) {
+                    window.location.href = linkForKey[key];
+                }
+            });
+        });
+    </script>
     <table style="width: 100%; max-width: 80%; margin: 0 auto;">
         <tr>
             <td>
-                <p>{{ container_link | safe }}</p>
+                {% if char_id %}
+                    {% set letter = link_letters.next() %}
+                    {% set link = url_for('play_char', char_id=char_id) %}
+                    <script>
+                        linkForKey['{{ letter }}'] = "{{ link }}";
+                    </script>
+                    Carried by
+                    <a href="{{ link }}">{{ container_name }}</a>
+                    <span>[{{ letter }}]</span><br>
+                {% elif loc_id %}
+                    {% set letter = link_letters.next() %}
+                    {% set link = url_for('play_location', loc_id=loc_id) %}
+                    <script>
+                        linkForKey['{{ letter }}'] = "{{ link }}";
+                    </script>
+                    At
+                    <a href="{{ link }}">{{ container_name }}</a>
+                    <span>[{{ letter }}]</span><br>
+                {% else %}
+                    General Storage<br>
+                {% endif %}
                 <h2 style="margin: 10px 10px; display: flex; align-items: center; flex-wrap: nowrap;">
                 {{ current.name }}:
                 {% if current.q_limit %}
@@ -29,13 +64,30 @@
             </td>
         </tr>
         <tr>
-            <td style="background-color: #2a2a2a; border-bottom: 2px solid #ffffff;">
+            <td>
                 <span id="recipe-progress-label-{{ current.id }}" style="">Recipe Progress:</span>
                 <div id="action-progress-container-{{ current.id }}" class="progress-container hidden" style="display: inline-flex">
                     <progress id="action-progress-bar-{{ current.id }}" class="progress-bar" value="0" max="100"></progress>
                     <span class="progress-label" id="action-progress-label-{{ current.id }}">0%</span>
                 </div>
                 <span id="elapsed-time" class="hidden">...</span>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {% if char_id %}
+                    <button id="drop-btn" class="go-button">[D]rop</button>
+                {% endif %}
+                {% if loc_id %}
+                    <button id="pickup-btn" class="go-button">[P]ick Up</button>
+                {% endif %}
+                {% if char_id or loc_id %}
+                    <button id="move_to_general-btn" class="go-button">Move to [G]eneral Storage</button>
+                {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <td style="background-color: #2a2a2a; border-bottom: 2px solid #ffffff;">
             </td>
         </tr>
         {% if current.description %}
@@ -93,11 +145,20 @@
                             {% endif %}
                         </td>
                         {% if rowspan > 0 %}
-                            <td>
-                                <a href="{{ url_for('play_item', item_id=recipe.sources[0].item.id, char_id=char_id, loc_id=loc_id) }}">
-                                    {{ recipe.sources[0].item.name }}
-                                </a>
-                            </td>
+                            {% set item = recipe.sources[0].item %}
+                            {% if item.id == current.id %}
+                                <td><strong>{{ item.name}}</strong></td>
+                            {% else %}
+                                {% set letter = link_letters.next() %}
+                                {% set link = url_for('play_item', item_id=item.id, char_id=char_id, loc_id=loc_id) %}
+                                <script>
+                                    linkForKey['{{ letter }}'] = "{{ link }}";
+                                </script>
+                                <td>
+                                    <span>[{{ letter }}]</span>
+                                    <a href="{{ link }}">{{ item.name }}</a>
+                                </td>
+                            {% endif %}
                             <td>
                                 {% if recipe.sources[0].preserve %}
                                     ({{ recipe.sources[0].q_required | dec2str }})
@@ -105,17 +166,26 @@
                                     {{ recipe.sources[0].q_required | dec2str }}
                                 {% endif %}
                             </td>
-                            <td id="recipe-{{ recipe.id }}-source-{{ recipe.sources[0].item.id }}-quantity">...</td>
-                            <td id="recipe-{{ recipe.id }}-source-{{ recipe.sources[0].item.id }}-at">...</td>
+                            <td id="recipe-{{ recipe.id }}-source-{{ item.id }}-quantity">...</td>
+                            <td id="recipe-{{ recipe.id }}-source-{{ item.id }}-at">...</td>
                         {% endif %}
                     </tr>
                     {% for source in recipe.sources[1:] %}
+                        {% set item = source.item %}
                     <tr>
-                        <td>
-                            <a href="{{ url_for('play_item', item_id=source.item.id, char_id=char_id, loc_id=loc_id) }}">
-                                {{ source.item.name }}
-                            </a>
-                        </td>
+                        {% if item.id == current.id %}
+                            <td><strong>{{ item.name}}</strong></td>
+                        {% else %}
+                            {% set letter = link_letters.next() %}
+                            {% set link = url_for('play_item', item_id=item.id, char_id=char_id, loc_id=loc_id) %}
+                            <script>
+                                linkForKey['{{ letter }}'] = "{{ link }}";
+                            </script>
+                            <td>
+                                <span>[{{ letter }}]</span>
+                                <a href="{{ link }}">{{ item.name }}</a>
+                            </td>
+                        {% endif %}
                         <td>
                             {% if source.preserve %}
                                 ({{ source.q_required | dec2str }})
@@ -123,8 +193,8 @@
                                 {{ source.q_required | dec2str }}
                             {% endif %}
                         </td>
-                        <td id="recipe-{{ recipe.id }}-source-{{ source.item.id }}-qtyreq">...</td>
-                        <td id="recipe-{{ recipe.id }}-source-{{ source.item.id }}-at">...</td>
+                        <td id="recipe-{{ recipe.id }}-source-{{ item.id }}-qtyreq">...</td>
+                        <td id="recipe-{{ recipe.id }}-source-{{ item.id }}-at">...</td>
                     </tr>
                     {% endfor %}
                     {% endfor %}
@@ -155,11 +225,15 @@
                         <th>Required</th>
                     </tr>
                     {% for used_for in outerscope.used_as_source %}
+                        {% set letter = link_letters.next() %}
+                        {% set link = url_for('play_item', item_id=used_for.item.id, char_id=char_id, loc_id=loc_id) %}
+                        <script>
+                            linkForKey['{{ letter }}'] = "{{ link }}";
+                        </script>
                     <tr>
                         <td>
-                            <a href="{{ url_for('play_item', item_id=used_for.item.id, char_id=char_id, loc_id=loc_id) }}">
-                                {{ used_for.item.name }}
-                            </a>
+                            <span>[{{ letter }}]</span>
+                            <a href="{{ link }}">{{ used_for.item.name }}</a>
                         </td>
                         <td>{{ used_for.q_required | dec2str }}</td>
                     </tr>
@@ -288,11 +362,11 @@
 
             // Fetch progress data and update all relevant information
             function fetchProgressData() {
-                let itemId = "{{ current.id }}";
-                let charId = "{{ char_id }}";
-                let locId = "{{ loc_id }}";
+                const itemId = "{{ current.id }}";
+                const charId = "{{ char_id }}";
+                const locId = "{{ loc_id }}";
                 let url = '/item/progress_data/' + itemId;
-                let queryParams = [];
+                const queryParams = [];
                 if (charId) {
                     queryParams.push('char_id=' + encodeURIComponent(charId));
                 }
@@ -399,6 +473,29 @@
                         console.error('Error:', error);
                         startFetchingProgress();
                     });
+            });
+
+            $('#drop-btn').click(function() {
+                const itemId = "{{ current.id }}";
+                const charId = "{{ char_id }}";
+                $.ajax({
+                    url: `/item/drop/${itemId}/char/${charId}`,
+                    method: 'POST',
+                    success: function(response) {
+                        if (response.status === 'success') {
+                            {% if char_id %} // Ensure that url_for() does not cause an error, even if the JavaScript code isn't executed.
+                                window.location.href = "{{ url_for('play_char', char_id=char_id) }}";
+                            {% endif %}
+                        } else {
+                            console.error(response.message);
+                            alert('Error: ' + response.message);
+                        }
+                    },
+                    error: function(error) {
+                        console.error('Error:', error);
+                        alert('Error: ' + error);
+                    }
+                });
             });
         });
     </script>
